--- a/css/puzzle.css
+++ b/css/puzzle.css
@@ -53,3 +53,12 @@ h1{
     color: red;
     margin: 0px;
 }
+
+@media screen and (max-width: 640px) {
+    body{
+        margin: 0;
+    }
+    h1{
+        font-size: 20px;
+    }
+  }
